scrollbar bugfix

--- a/resources/webview/css/datatable.css
+++ b/resources/webview/css/datatable.css
@@ -6,7 +6,6 @@
  */
 
 .table-container {
-	overflow: auto;
 	flex: 1;
 }
 
